# FaceSR-CPP

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLETION_MEMO.md  CONTRIBUTING.md  DOCS.md  Directory.Build.props  EVALUATION.md  LICENSE  ORGANIZING_CHECKLIST.txt  QUICKSTART.md  README.md  SECURITY.md  STRUCTURE.md  analyze_checkpoint_quality.py  diagnose_sr_issue.py  evaluate_model_final.py  extract_and_prepare.py  gen_lr.py  generate_final_summary.py  generate_root_cause_analysis.py  generate_thesis_assessment.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: finetune_phase_a.ini  finetune_phase_b.ini  finetune_phase_c.ini  train_config.ini  train_config_sharper.ini  ui_config.ini  ui_config_examples.txt
config/ablations/: a1_l1_only.ini  a2_l1_perceptual.ini  a3_full_nonprogressive.ini  a4_three_stage.ini  a5_three_stage_attention.ini
config/ablations_quick/: a1_l1_only_50e.ini  a2_l1_perceptual_50e.ini  a4_three_stage_50e.ini  a5_three_stage_attention_50e.ini
docs/: ABLATION_EXPERIMENTS.md  DATA_PROCESSING_ARCHITECTURE.md  DATA_PROCESSING_FIGURES_WORD.md  EVALUATION.md  FACESR_LEARNING_TO_DEFENSE_GUIDE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  build.md  configuration.md  maintainer_notes.md  usage.md
include/: inference.h  trainer.h
include/common/: config.h  config_parser.h  logger.h  random.h
include/gui/: background_widget.h  frosted_widget.h  main_window.h  style_config.h
include/models/: attention.h  discriminator.h  generator.h  losses.h
include/utils/: dataset.h  image_utils.h  metrics.h
results/eval_reports/: checkpoint_comparison_summary.csv  model_selection_and_sharper_plan.md  worst_cases_best.csv
results/final_eval/: final_result_summary.txt
scripts/: autodl_setup.sh  finetune.sh  train.bat  train.sh
scripts/ablation/: evaluate_ablation_checkpoints.py  evaluate_quick_ablation_checkpoints.py  run_ablation_plan.ps1  run_quick_ablation_plan.ps1
scripts/analysis/: generate_final_summary.py  generate_root_cause_analysis.py  generate_thesis_assessment.py  training_decision_analysis.py
scripts/evaluation/: compute_a4_full_metrics.py  compute_a4_ssim.py  compute_lpips_a4_revision.py  diagnose_sr_issue.py  evaluate_model.py  evaluate_model_final.py  final_recompute_eval.py
src/: inference.cpp  main_gui.cpp  main_test.cpp  main_train.cpp  trainer.cpp
src/gui/: background_widget.cpp  frosted_widget.cpp  main_window.cpp  style_config.cpp
src/models/: attention.cpp  discriminator.cpp  generator.cpp  losses.cpp
src/utils/: dataset.cpp  image_utils.cpp  metrics.cpp
thesis/: DEFENSE_OUTLINE.md  INTERVIEW_QA.md  KNOWLEDGE_CHEATSHEET.md  胡凌轩+超分辨率人脸图像重建算法实现与应用.docx  论文三维评估报告.md
